# atelier-ui

./: .gitignore  package-lock.json  package.json  rollup.config.js
src/: App.svelte
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/editor/: EditorAppNav.svelte  EditorPannel.svelte
src/editor/input/: EditorInputRanger.svelte
src/editor/tabs/: EditorDock.svelte  EditorTab.svelte
