workspace = { }

[package]
name = "atelier-ui"
version = "0.0.1"
description = "Atelier UI Tauri app"
author = [ "Alve Larsson <mralve@amethyst-engine.org>" ]
license = ""
repository = "https://github.com/amethyst/atelier-ui"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0.44"
serde = "1.0"
serde_derive = "1.0"
tiny_http = "0.6"
phf = "0.8.0"
includedir = "0.5.0"
tauri = {"0.4.3", features = [ "all-api", "edge" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
dev-server = [ "tauri/dev-server" ]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "app"
path = "src/main.rs"
